# supereight-mod

./: .gitignore  CMakeLists.txt  Makefile  README.md
apps/kfusion/: CMakeLists.txt  Makefile  fr2_desk.raw
apps/kfusion/include/: DenseSLAMSystem.h  commons.h  default_parameters.h  draw.h  kernels.h  math_utils.h  vtk-io.h
apps/kfusion/include/continuous/: volume_instance.hpp  volume_template.hpp
apps/kfusion/qt/: QtGUI.cpp
apps/kfusion/scripts/: _run.py  datasets.py  run_kf.py  systemsettings.py
apps/kfusion/src/: benchmark.cpp  mainQt.cpp  reader.cpp
apps/kfusion/src/cpp/: DenseSLAMSystem.cpp  kernels.cpp  kfusion.cpp  mapping.hpp  marching_cubes.cpp  preprocessing.cpp  rendering.cpp  tracking.cpp
apps/kfusion/src/cpp/bfusion/: alloc_impl.hpp  allocation.hpp  bspline_lookup.cc  mapping_impl.hpp  rendering_impl.hpp
apps/kfusion/src/cpp/continuous/: sdf_volume.hpp  volume.hpp  volume_instance.hpp  volume_template.hpp  volume_traits.hpp
apps/kfusion/src/cpp/kfusion/: alloc_impl.hpp  mapping_impl.hpp  rendering_impl.hpp
commons/: globals.h  math_utils.h  perfstats.h  timings.h  voxel_traits.hpp
lib/: data.hpp  interp_gather.hpp  mapping.hpp  memory_pool.hpp  node.hpp  octant_ops.hpp  octree.hpp  octree_defines.h  ray_iterator.hpp  volume_template.hpp  voxel_traits.hpp
lib/algorithms/: alloc_list.hpp  filter.hpp  mapping.hpp  meshing.hpp  raycasting.cpp  unique.hpp
lib/continuous/: volume.hpp  volume_template.hpp
lib/functors/: axis_aligned_functor.hpp  data_handler.hpp  projective_functor.hpp
lib/geometry/: aabb_collision.hpp  octree_collision.hpp
lib/interpolation/: interp_gather.hpp
lib/io/: se_serialise.hpp
lib/test/: CMakeLists.txt  Makefile
lib/test/algorithms/: unique_unittest.cpp
lib/test/allocation/: CMakeLists.txt  alloc_unittest.cpp
lib/test/functor/: axisaligned_unittest.cpp
lib/test/geometry/: CMakeLists.txt  aabb_collision_unittest.cpp  collision_unittest.cpp  octree_collision_unittest.cpp
lib/test/interp/: CMakeLists.txt  gather_unittest.cpp  interp_unittest.cpp  interpolation_unittest.cpp
lib/test/io/: io_unittest.cpp
lib/test/multiscale/: multiscale_unittest.cpp
lib/test/octree/: octree_unittest.cpp  ray_iterator_unittest.cpp
lib/test/utils/: morton_unittest.cpp
lib/utils/: eigen_helper.h  memory_pool.hpp  morton_utils.hpp  se_common.h  se_math_helper.h
se_apps/: CMakeLists.txt
se_apps/include/: default_parameters.h
se_apps/qt/: QtGUI.cpp
se_apps/scripts/: _run.py  run_kf.py
se_apps/src/: benchmark.cpp
se_core/include/se/: node.hpp  octant_ops.hpp  octree.hpp  ray_iterator.hpp
se_core/include/se/algorithms/: filter.hpp  meshing.hpp  unique.hpp
se_core/include/se/functors/: axis_aligned_functor.hpp  data_handler.hpp  projective_functor.hpp
se_core/include/se/geometry/: aabb_collision.hpp  octree_collision.hpp
se_core/include/se/interpolation/: interp_gather.hpp
se_core/include/se/io/: se_serialise.hpp
se_core/include/se/test/: CMakeLists.txt
se_core/include/se/test/algorithms/: unique_unittest.cpp
se_core/include/se/test/allocation/: alloc_unittest.cpp
se_core/include/se/test/functor/: axisaligned_unittest.cpp
se_core/include/se/test/interp/: gather_unittest.cpp  interpolation_unittest.cpp
se_core/include/se/test/io/: io_unittest.cpp
se_core/include/se/test/multiscale/: multiscale_unittest.cpp
se_core/include/se/test/octree/: octree_unittest.cpp  ray_iterator_unittest.cpp
se_core/include/se/utils/: memory_pool.hpp  morton_utils.hpp  se_common.h  se_math_helper.h
se_core/test/algorithms/: unique_unittest.cpp
se_core/test/allocation/: alloc_unittest.cpp
se_core/test/geometry/: aabb_collision_unittest.cpp  octree_collision_unittest.cpp
se_core/test/interp/: gather_unittest.cpp
se_core/test/io/: io_unittest.cpp
se_core/test/multiscale/: multiscale_unittest.cpp
se_core/test/octree/: ray_iterator_unittest.cpp
se_denseslam/: CMakeLists.txt
se_denseslam/include/se/: DenseSLAMSystem.h  commons.h  config.h  vtk-io.h
se_denseslam/include/se/continuous/: volume_instance.hpp  volume_template.hpp  volume_traits.hpp
se_denseslam/src/: DenseSLAMSystem.cpp  preprocessing.cpp  rendering.cpp  tracking.cpp
se_denseslam/src/bfusion/: mapping_impl.hpp  rendering_impl.hpp
se_denseslam/src/kfusion/: mapping_impl.hpp  rendering_impl.hpp
se_shared/: CMakeLists.txt
utils/: math_utils.h
